add post function & add view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,10 @@
 
 <body>
     {{{body}}}
+    <form>
+  <label for="fname">Write your following sentence here:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+    </form>
 </body>
 
 </html>
