--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,8 @@
 <p>{{startingSentence}}</p>
 
 
-  <form>
-<label for="title">Write your following sentence here:</label><br>
-<input type="text" id="title" name="title"><br>
-  </form>
-
-<button class="button" type="button"><a class="link" href="/addSentence">Add Sentence</a></button>
+<form action='/add-sentence' method="POST">
+  <label for="sentence">Write your following sentence here:</label><br>
+  <input type="text" id="sentence" name="sentence"><br> <br>
+  <input type="submit" value="Submit">
+</form>`
