--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,4 +5,4 @@
   <label for="sentence">Write your following sentence here:</label><br>
   <input type="text" id="sentence" name="sentence"><br> <br>
   <input type="submit" value="Submit">
-</form>`
+</form>
