--- a/views/next-sentence.hbs
+++ b/views/next-sentence.hbs
@@ -8,3 +8,5 @@
   <input type="text" id="sentence" name="sentence"><br> <br>
   <input type="submit" value="Submit">
 </form>
+
+<a href="/display-story">Display story</a>
