--- a/views/display-story.hbs
+++ b/views/display-story.hbs
@@ -1,7 +1,12 @@
-{{startingSentence}}
 
-<ul>
+<h2>Your completed story...</h2>
+
+<div>
+  <p>{{startingSentence}} <br>
   {{#each story}}
-  <li>{{userSentence}}</li>
+{{userSentence}}<br>
   {{/each}}
-</ul>
+  </p>
+</div>
+<button class="button" type="button"><a class="link" href="/">Restart</a></button>
+<br>
