--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,12 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/main.css"> 
   <title>Document</title>
 </head>
 <body>
-  {{{body}}}
+    <h1>TellStory</h1> 
+    {{{body}}}
 </body>
 </html>
 
