Add crude print story button - prints whole page

--- a/views/display-story.hbs
+++ b/views/display-story.hbs
@@ -9,4 +9,6 @@
   </p>
 </div>
 <button class="button" type="button"><a class="link" href="/">Restart</a></button>
+<button class="button" type="button"><a href="#" onclick="window.print();return false;" title="Print Story">Print Story</a></button>
+{{!-- <a href="#" onclick="window.print();return false;" title="Click to print this page">Print this page</a> --}}
 <br>
