--- a/public/main.css
+++ b/public/main.css
@@ -67,3 +67,21 @@ a {
 text-align: center;
 padding: 0%;
 }
+
+@media only screen and (max-width: 1200px) {
+  body {
+    background-color: green;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    background-color: red;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  body {
+    background-color: orange;
+  }
+}
