--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css"> 
-  <title>Document</title>
+  <title>TellStory</title>
 </head>
 <body>
     <h1>TellStory</h1> 
